--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="images/me.jpeg" alt="ric flair drip go woo" height="200" width="200">
+                    <img src="me.jpeg" alt="ric flair drip go woo" height="200" width="200">
                 </td>
                 <td>
                     <h1>Eric Segerberg</h1>
