--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <link rel="icon" type="image/png" href="/Images/favicon-16x16.png" sizes="16x16"/>
+        <link rel="icon" type="image/png" href="Images/favicon-16x16.png" sizes="16x16"/>
         <meta charset="utf-8">
         <title>Eric's Personal Site</title>
     </head>
@@ -12,7 +12,7 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="/Images/me.jpeg" alt="ric flair drip go woo" height="200" width="200">
+                    <img src="Images/me.jpeg" alt="ric flair drip go woo" height="200" width="200">
                 </td>
                 <td>
                     <h1>Eric Segerberg</h1>
