updating contact me & hobbies pages

--- a/contactinfo.html
+++ b/contactinfo.html
@@ -6,11 +6,8 @@
     </head>
 
     <body>
-        <h3>My Contact Info</h3>
-        <h7><em>*In order of preference</em></h4>
-        <p>esegerberg@yahoo.com<br>
-            (203) 123-4567
-        </p>
+        <h3>Contact Me</h3>
+        <p>If you want to contact me, fill out the below form and send me an email!</p> 
         <hr>
         <!--forms have lots of different attribute options-->
         <form action="mailto:esegerberg8@gmail.com" method="post" enctype="text/plain">
