--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
         <h3>My Hobbies</h3>
         <ol type="1">
             <li>Basketball</li>
-            <li>Valorant</li>
+            <li>Valorant (not Forty, I know I'm a fraud)</li>
             <li>Food</li>
         </ol>
     </body>
