--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <hr>
         <p>
             <a href="hobbies.html" target="_blank">My Hobbies</a>
-            <a href="contactinfo.html" target="_blank">Contact Info</a>
+            <a href="contactinfo.html" target="_blank">Contact Me!</a>
         </p>
     </body>
 
